use List.of() consistently